Initialize an MTA on the Device Polling Thread

The change explicitly initializes a COM MTA on the device polling
thread. Previously, an COM implicitly initialized an MTA on the first
CoCreateInstance call.

BUG=734706

Change-Id: I64e70f06b2e82520419ce74e3bc2db396896af4c
Reviewed-on: https://chromium-review.googlesource.com/544685
Reviewed-by: Tim Volodine <timvolodine@chromium.org>
Commit-Queue: Robert Liao <robliao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#481942}
Former-commit-id: 8c422776556e72ee3f7692125fcd8b0015db13dd